# TPE

./: CMakeLists.txt  censo1.csv  censo2.csv  superficies.csv
src/: country.c  country.h  department.c  department.h  departmentList.c  departmentList.h  fileManager.c  fileManager.h  homeList.c  homeList.h  main.c  province.c  province.h  provinceList.c  provinceList.h
